--- a/index.html
+++ b/index.html
@@ -217,7 +217,17 @@
 		</div>
 		<div class="container">
 			<div class="tour-title">
-				<h2><hr class="first">Горящие туры из Алматы</h2>
+				<div class="row">
+					<div class="col-1 line-left-d">
+						<div class="line-left"></div>
+					</div>
+					<div class="col-5 tour-text">
+						<h2 class="tour-span">Горящие туры из <span><u>Алматы</u></span></h2>
+					</div>
+					<div class="col-6 line-right-d">
+						<div class="line-right"></div>
+					</div>
+				</div>
 			</div>
 
 			<div id="wwss" class="owl-carousel sliderWapper owl-theme">
