--- a/index.html
+++ b/index.html
@@ -122,7 +122,17 @@
 
 
 				<div class="nav-item align-mine">
-					<a href="#"><img src="img/header/ion_person-circle-outline.png" alt=""> Личный кабинет</a>
+					<div class="nav-item dropdown dropdown-oun-private">
+						<a class="nav-link dropdown-toggle text-center" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<img src="img/header/ion_person-circle-outline.png" alt=""> Личный кабинет
+						</a>
+						<div class="dropdown-menu private-text" aria-labelledby="navbarDropdown">
+							<a class="dropdown-item" href="#">Action</a>
+							<a class="dropdown-item" href="#">Another action</a>
+							<div class="dropdown-divider"></div>
+							<a class="dropdown-item" href="#">Something else here</a>
+						</div>
+					</div>
 				</div>
 
 
@@ -362,7 +372,19 @@
 
 	<div class="most-direction">
 		<div class="container">
-			<h2>Популярные направления</h2>
+			<div class="tour-title" style="margin-top: 50px;">
+				<div class="row">
+					<div class="col-1 line-left-d">
+						<div class="line-left"></div>
+					</div>
+					<div class="col-5 tour-text">
+						<h2 class="tour-span">Популярные направления</h2>
+					</div>
+					<div class="col-6 line-right-d">
+						<div class="line-right"></div>
+					</div>
+				</div>
+			</div>
 			<div class="row">
 				<div class="col-3 direction-block">
 					<a href="#"><img src="img/direction/s1.png" alt=""></a>
@@ -465,7 +487,19 @@
 
 	<div class="review-block">
 		<div class="container review-inner">
-			<h2>Отзывы наших клиентов</h2>
+			<div class="tour-title" style="margin-top: 30px;">
+				<div class="row" style="height: 30px;">
+					<div class="col-1 line-left-d">
+						<div class="line-left"></div>
+					</div>
+					<div class="col-5 tour-text">
+						<h2 class="re-tex">Отзывы наших клиентов</h2>
+					</div>
+					<div class="col-6 line-right-d">
+						<div class="line-right"></div>
+					</div>
+				</div>
+			</div>
 
 			<div id="qqaa" class="owl-carousel owl-theme">
 				<div class="item r-size">
