--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-2 tab-svg text-center">
+						<div class="col-2 tab-svg tab-last text-center">
 							
 							<div class="nav-item dropdown dropdown-oun-sera">
 								<a class="nav-link dropdown-toggle text-center" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -320,7 +320,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-2 tab-svg text-center">
+						<div class="col-2 tab-svg tab-last text-center">
 							<div class="nav-item dropdown dropdown-oun-sera">
 								<a class="nav-link dropdown-toggle text-center" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 									2 взр, 1 дет <img src="img/tabs/person.svg" alt="">
