--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 	</div>
 
 	<div class="tab-block">
-		<div class="container tab-bg">
+		<div class="container tab-bg" style="z-index: 1;">
 			<ul class="nav nav-tabs">
 				<li class="nav-item">
 					<a class="nav-link tab-link active" data-toggle="tab" href="#description">Пойск туров<img class="earth-svg" src="img/tabs/ion_earth-outline.svg" alt=""></a>
