--- a/index.html
+++ b/index.html
@@ -372,17 +372,18 @@
 				</div>
 			</div>
 
-			<div id="wwss" class="owl-carousel sliderWapper owl-theme">
-
+			div id="wwss" class="owl-carousel sliderWapper owl-theme">
 				<div class="item carousel-img"><img src="img/carousel/image.png" alt="">
-					<div class="up"> 
+					<div class="up"></div>
+					<div class="up-content">
 						<img src="img/icon/Icon_star.svg" alt="" class="first-star">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<p class="up-text">23.05.19 (7 ночей)</p>
 					</div>
-					<div class="down">
+					<div class="down"></div>
+					<div class="down-content">
 						<p class="down-text"><span>180 000 Т</span><br>&nbsp;&nbsp;за человека</p>
 						<img src="img/zaka.svg" alt="">
 						<button type="button" class="btn btn-zaka"><p>Заказать</p></button>
@@ -391,14 +392,16 @@
 					<p class="car-subtext">Турция , Кемер</p>
 				</div>
 				<div class="item carousel-img"><img src="img/carousel/image.png" alt="">
-					<div class="up">
+					<div class="up"></div>
+					<div class="up-content">
 						<img src="img/icon/Icon_star.svg" alt="" class="first-star">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<p class="up-text">23.05.19 (7 ночей)</p>
 					</div>
-					<div class="down">
+					<div class="down"></div>
+					<div class="down-content">
 						<p class="down-text"><span>180 000 Т</span><br>&nbsp;&nbsp;за человека</p>
 						<img src="img/zaka.svg" alt="">
 						<button type="button" class="btn btn-zaka"><p>Заказать</p></button>
@@ -407,14 +410,16 @@
 					<p class="car-subtext">Турция , Кемер</p>
 				</div>
 				<div class="item carousel-img"><img src="img/carousel/image.png" alt="">
-					<div class="up">
+					<div class="up"></div>
+					<div class="up-content">
 						<img src="img/icon/Icon_star.svg" alt="" class="first-star">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<p class="up-text">23.05.19 (7 ночей)</p>
 					</div>
-					<div class="down">
+					<div class="down"></div>
+					<div class="down-content">
 						<p class="down-text"><span>180 000 Т</span><br>&nbsp;&nbsp;за человека</p>
 						<img src="img/zaka.svg" alt="">
 						<button type="button" class="btn btn-zaka"><p>Заказать</p></button>
@@ -423,31 +428,16 @@
 					<p class="car-subtext">Турция , Кемер</p>
 				</div>
 				<div class="item carousel-img"><img src="img/carousel/image.png" alt="">
-					<div class="up">
+					<div class="up"></div>
+					<div class="up-content">
 						<img src="img/icon/Icon_star.svg" alt="" class="first-star">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<p class="up-text">23.05.19 (7 ночей)</p>
 					</div>
-					<div class="down">
-						<p class="down-text"><span>180 000 Т</span><br>&nbsp;&nbsp;за человека</p>
-						<img src="img/zaka.svg" alt="">
-						<button type="button" class="btn btn-zaka"><p>Заказать</p></button>
-					</div>
-					<p class="car-text">Orange County Resort Hotel</p>
-					<p class="car-subtext">Турция , Кемер</p>
-					
-				</div>
-				<div class="item carousel-img"><img src="img/carousel/image.png" alt="">
-					<div class="up">
-						<img src="img/icon/Icon_star.svg" alt="" class="first-star">
-						<img src="img/icon/Icon_star.svg" alt="">
-						<img src="img/icon/Icon_star.svg" alt="">
-						<img src="img/icon/Icon_star.svg" alt="">
-						<p class="up-text">23.05.19 (7 ночей)</p>
-					</div>
-					<div class="down">
+					<div class="down"></div>
+					<div class="down-content">
 						<p class="down-text"><span>180 000 Т</span><br>&nbsp;&nbsp;за человека</p>
 						<img src="img/zaka.svg" alt="">
 						<button type="button" class="btn btn-zaka"><p>Заказать</p></button>
@@ -456,31 +446,16 @@
 					<p class="car-subtext">Турция , Кемер</p>
 				</div>
 				<div class="item carousel-img"><img src="img/carousel/image.png" alt="">
-					<div class="up">
+					<div class="up"></div>
+					<div class="up-content">
 						<img src="img/icon/Icon_star.svg" alt="" class="first-star">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<p class="up-text">23.05.19 (7 ночей)</p>
 					</div>
-					<div class="down">
-						<p class="down-text"><span>180 000 Т</span><br>&nbsp;&nbsp;за человека</p>
-						<img src="img/zaka.svg" alt="">
-						<button type="button" class="btn btn-zaka"><p>Заказать</p></button>
-					</div>
-					<p class="car-text">Orange County Resort Hotel</p>
-					<p class="car-subtext">Турция , Кемер</p>
-
-				</div>
-				<div class="item carousel-img"><img src="img/carousel/image.png" alt="">
-					<div class="up">
-						<img src="img/icon/Icon_star.svg" alt="" class="first-star">
-						<img src="img/icon/Icon_star.svg" alt="">
-						<img src="img/icon/Icon_star.svg" alt="">
-						<img src="img/icon/Icon_star.svg" alt="">
-						<p class="up-text">23.05.19 (7 ночей)</p>
-					</div>
-					<div class="down">
+					<div class="down"></div>
+					<div class="down-content">
 						<p class="down-text"><span>180 000 Т</span><br>&nbsp;&nbsp;за человека</p>
 						<img src="img/zaka.svg" alt="">
 						<button type="button" class="btn btn-zaka"><p>Заказать</p></button>
@@ -489,14 +464,52 @@
 					<p class="car-subtext">Турция , Кемер</p>
 				</div>
 				<div class="item carousel-img"><img src="img/carousel/image.png" alt="">
-					<div class="up">
+					<div class="up"></div>
+					<div class="up-content">
 						<img src="img/icon/Icon_star.svg" alt="" class="first-star">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<p class="up-text">23.05.19 (7 ночей)</p>
 					</div>
-					<div class="down">
+					<div class="down"></div>
+					<div class="down-content">
+						<p class="down-text"><span>180 000 Т</span><br>&nbsp;&nbsp;за человека</p>
+						<img src="img/zaka.svg" alt="">
+						<button type="button" class="btn btn-zaka"><p>Заказать</p></button>
+					</div>
+					<p class="car-text">Orange County Resort Hotel</p>
+					<p class="car-subtext">Турция , Кемер</p>
+				</div>
+				<div class="item carousel-img"><img src="img/carousel/image.png" alt="">
+					<div class="up"></div>
+					<div class="up-content">
+						<img src="img/icon/Icon_star.svg" alt="" class="first-star">
+						<img src="img/icon/Icon_star.svg" alt="">
+						<img src="img/icon/Icon_star.svg" alt="">
+						<img src="img/icon/Icon_star.svg" alt="">
+						<p class="up-text">23.05.19 (7 ночей)</p>
+					</div>
+					<div class="down"></div>
+					<div class="down-content">
+						<p class="down-text"><span>180 000 Т</span><br>&nbsp;&nbsp;за человека</p>
+						<img src="img/zaka.svg" alt="">
+						<button type="button" class="btn btn-zaka"><p>Заказать</p></button>
+					</div>
+					<p class="car-text">Orange County Resort Hotel</p>
+					<p class="car-subtext">Турция , Кемер</p>
+				</div>
+				<div class="item carousel-img"><img src="img/carousel/image.png" alt="">
+					<div class="up"></div>
+					<div class="up-content">
+						<img src="img/icon/Icon_star.svg" alt="" class="first-star">
+						<img src="img/icon/Icon_star.svg" alt="">
+						<img src="img/icon/Icon_star.svg" alt="">
+						<img src="img/icon/Icon_star.svg" alt="">
+						<p class="up-text">23.05.19 (7 ночей)</p>
+					</div>
+					<div class="down"></div>
+					<div class="down-content">
 						<p class="down-text"><span>180 000 Т</span><br>&nbsp;&nbsp;за человека</p>
 						<img src="img/zaka.svg" alt="">
 						<button type="button" class="btn btn-zaka"><p>Заказать</p></button>
