--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 	</div>
 
 	<div class="tab-block">
-		<div class="container tab-bg" style="z-index: 1;">
+		<div class="container tab-bg">
 			<ul class="nav nav-tabs">
 				<li class="nav-item">
 					<a class="nav-link tab-link active" data-toggle="tab" href="#description">Пойск туров<img class="earth-svg" src="img/tabs/ion_earth-outline.svg" alt=""></a>
@@ -373,16 +373,17 @@
 			</div>
 
 			<div id="wwss" class="owl-carousel sliderWapper owl-theme">
-
 				<div class="item carousel-img"><img src="img/carousel/image.png" alt="">
-					<div class="up"> 
+					<div class="up"></div>
+					<div class="up-content">
 						<img src="img/icon/Icon_star.svg" alt="" class="first-star">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<p class="up-text">23.05.19 (7 ночей)</p>
 					</div>
-					<div class="down">
+					<div class="down"></div>
+					<div class="down-content">
 						<p class="down-text"><span>180 000 Т</span><br>&nbsp;&nbsp;за человека</p>
 						<img src="img/zaka.svg" alt="">
 						<button type="button" class="btn btn-zaka"><p>Заказать</p></button>
@@ -391,14 +392,16 @@
 					<p class="car-subtext">Турция , Кемер</p>
 				</div>
 				<div class="item carousel-img"><img src="img/carousel/image.png" alt="">
-					<div class="up">
+					<div class="up"></div>
+					<div class="up-content">
 						<img src="img/icon/Icon_star.svg" alt="" class="first-star">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<p class="up-text">23.05.19 (7 ночей)</p>
 					</div>
-					<div class="down">
+					<div class="down"></div>
+					<div class="down-content">
 						<p class="down-text"><span>180 000 Т</span><br>&nbsp;&nbsp;за человека</p>
 						<img src="img/zaka.svg" alt="">
 						<button type="button" class="btn btn-zaka"><p>Заказать</p></button>
@@ -407,14 +410,16 @@
 					<p class="car-subtext">Турция , Кемер</p>
 				</div>
 				<div class="item carousel-img"><img src="img/carousel/image.png" alt="">
-					<div class="up">
+					<div class="up"></div>
+					<div class="up-content">
 						<img src="img/icon/Icon_star.svg" alt="" class="first-star">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<p class="up-text">23.05.19 (7 ночей)</p>
 					</div>
-					<div class="down">
+					<div class="down"></div>
+					<div class="down-content">
 						<p class="down-text"><span>180 000 Т</span><br>&nbsp;&nbsp;за человека</p>
 						<img src="img/zaka.svg" alt="">
 						<button type="button" class="btn btn-zaka"><p>Заказать</p></button>
@@ -423,31 +428,16 @@
 					<p class="car-subtext">Турция , Кемер</p>
 				</div>
 				<div class="item carousel-img"><img src="img/carousel/image.png" alt="">
-					<div class="up">
+					<div class="up"></div>
+					<div class="up-content">
 						<img src="img/icon/Icon_star.svg" alt="" class="first-star">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<p class="up-text">23.05.19 (7 ночей)</p>
 					</div>
-					<div class="down">
-						<p class="down-text"><span>180 000 Т</span><br>&nbsp;&nbsp;за человека</p>
-						<img src="img/zaka.svg" alt="">
-						<button type="button" class="btn btn-zaka"><p>Заказать</p></button>
-					</div>
-					<p class="car-text">Orange County Resort Hotel</p>
-					<p class="car-subtext">Турция , Кемер</p>
-					
-				</div>
-				<div class="item carousel-img"><img src="img/carousel/image.png" alt="">
-					<div class="up">
-						<img src="img/icon/Icon_star.svg" alt="" class="first-star">
-						<img src="img/icon/Icon_star.svg" alt="">
-						<img src="img/icon/Icon_star.svg" alt="">
-						<img src="img/icon/Icon_star.svg" alt="">
-						<p class="up-text">23.05.19 (7 ночей)</p>
-					</div>
-					<div class="down">
+					<div class="down"></div>
+					<div class="down-content">
 						<p class="down-text"><span>180 000 Т</span><br>&nbsp;&nbsp;за человека</p>
 						<img src="img/zaka.svg" alt="">
 						<button type="button" class="btn btn-zaka"><p>Заказать</p></button>
@@ -456,31 +446,16 @@
 					<p class="car-subtext">Турция , Кемер</p>
 				</div>
 				<div class="item carousel-img"><img src="img/carousel/image.png" alt="">
-					<div class="up">
+					<div class="up"></div>
+					<div class="up-content">
 						<img src="img/icon/Icon_star.svg" alt="" class="first-star">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<p class="up-text">23.05.19 (7 ночей)</p>
 					</div>
-					<div class="down">
-						<p class="down-text"><span>180 000 Т</span><br>&nbsp;&nbsp;за человека</p>
-						<img src="img/zaka.svg" alt="">
-						<button type="button" class="btn btn-zaka"><p>Заказать</p></button>
-					</div>
-					<p class="car-text">Orange County Resort Hotel</p>
-					<p class="car-subtext">Турция , Кемер</p>
-
-				</div>
-				<div class="item carousel-img"><img src="img/carousel/image.png" alt="">
-					<div class="up">
-						<img src="img/icon/Icon_star.svg" alt="" class="first-star">
-						<img src="img/icon/Icon_star.svg" alt="">
-						<img src="img/icon/Icon_star.svg" alt="">
-						<img src="img/icon/Icon_star.svg" alt="">
-						<p class="up-text">23.05.19 (7 ночей)</p>
-					</div>
-					<div class="down">
+					<div class="down"></div>
+					<div class="down-content">
 						<p class="down-text"><span>180 000 Т</span><br>&nbsp;&nbsp;за человека</p>
 						<img src="img/zaka.svg" alt="">
 						<button type="button" class="btn btn-zaka"><p>Заказать</p></button>
@@ -489,14 +464,52 @@
 					<p class="car-subtext">Турция , Кемер</p>
 				</div>
 				<div class="item carousel-img"><img src="img/carousel/image.png" alt="">
-					<div class="up">
+					<div class="up"></div>
+					<div class="up-content">
 						<img src="img/icon/Icon_star.svg" alt="" class="first-star">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<img src="img/icon/Icon_star.svg" alt="">
 						<p class="up-text">23.05.19 (7 ночей)</p>
 					</div>
-					<div class="down">
+					<div class="down"></div>
+					<div class="down-content">
+						<p class="down-text"><span>180 000 Т</span><br>&nbsp;&nbsp;за человека</p>
+						<img src="img/zaka.svg" alt="">
+						<button type="button" class="btn btn-zaka"><p>Заказать</p></button>
+					</div>
+					<p class="car-text">Orange County Resort Hotel</p>
+					<p class="car-subtext">Турция , Кемер</p>
+				</div>
+				<div class="item carousel-img"><img src="img/carousel/image.png" alt="">
+					<div class="up"></div>
+					<div class="up-content">
+						<img src="img/icon/Icon_star.svg" alt="" class="first-star">
+						<img src="img/icon/Icon_star.svg" alt="">
+						<img src="img/icon/Icon_star.svg" alt="">
+						<img src="img/icon/Icon_star.svg" alt="">
+						<p class="up-text">23.05.19 (7 ночей)</p>
+					</div>
+					<div class="down"></div>
+					<div class="down-content">
+						<p class="down-text"><span>180 000 Т</span><br>&nbsp;&nbsp;за человека</p>
+						<img src="img/zaka.svg" alt="">
+						<button type="button" class="btn btn-zaka"><p>Заказать</p></button>
+					</div>
+					<p class="car-text">Orange County Resort Hotel</p>
+					<p class="car-subtext">Турция , Кемер</p>
+				</div>
+				<div class="item carousel-img"><img src="img/carousel/image.png" alt="">
+					<div class="up"></div>
+					<div class="up-content">
+						<img src="img/icon/Icon_star.svg" alt="" class="first-star">
+						<img src="img/icon/Icon_star.svg" alt="">
+						<img src="img/icon/Icon_star.svg" alt="">
+						<img src="img/icon/Icon_star.svg" alt="">
+						<p class="up-text">23.05.19 (7 ночей)</p>
+					</div>
+					<div class="down"></div>
+					<div class="down-content">
 						<p class="down-text"><span>180 000 Т</span><br>&nbsp;&nbsp;за человека</p>
 						<img src="img/zaka.svg" alt="">
 						<button type="button" class="btn btn-zaka"><p>Заказать</p></button>
