--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<div class="col-8 header-inff">
 							<div class="header-inf-title">
 								<h2 class="text-center">ПЕРЕЗВОНИТЕ МНЕ</h2>
-								<p class="text-center header-inf-numb"><u>8 (707) 777 77 77</u></p>
+								<p class="text-center header-inf-numb">8 (707) 777 77 77</p>
 							</div>
 						</div>
 					</div>
